--- a/retailer.html
+++ b/retailer.html
@@ -12,17 +12,61 @@
 *{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#f3f6fb}
 .main{padding:20px}
-.icon-bar{display:flex;gap:20px;justify-content:center;background:#064e3b;padding:12px;border-radius:14px;max-width:600px;margin:auto}
-.icon-btn{background:#16a34a;color:#fff;border:none;width:55px;height:55px;border-radius:50%;font-size:22px;cursor:pointer}
-.header{margin-top:15px;background:#fff;padding:15px;border-radius:12px;text-align:center;box-shadow:0 5px 15px rgba(0,0,0,.08)}
-.products-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:10px;margin-top:20px}
-.product-card{background:#fff;padding:6px;border-radius:10px;text-align:center;cursor:pointer;box-shadow:0 3px 8px rgba(0,0,0,.08)}
-.product-card img{width:100%;height:90px;object-fit:cover;border-radius:8px}
+.icon-bar{
+ display:flex;gap:20px;justify-content:center;
+ background:#064e3b;padding:12px;border-radius:14px;
+ max-width:600px;margin:auto
+}
+.icon-btn{
+ background:#16a34a;color:#fff;border:none;
+ width:55px;height:55px;border-radius:50%;
+ font-size:22px;cursor:pointer
+}
+.header{
+ margin-top:15px;background:#fff;padding:15px;
+ border-radius:12px;text-align:center;
+ box-shadow:0 5px 15px rgba(0,0,0,.08)
+}
+.products-grid{
+ display:grid;grid-template-columns:repeat(3,1fr);
+ gap:10px;margin-top:20px
+}
+.product-card{
+ background:#fff;padding:6px;border-radius:10px;
+ text-align:center;cursor:pointer;
+ box-shadow:0 3px 8px rgba(0,0,0,.08)
+}
+.product-card img{
+ width:100%;height:90px;object-fit:cover;border-radius:8px
+}
 .price{color:#16a34a;font-weight:600;font-size:13px}
-.modal{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:center;justify-content:center;z-index:20}
-.modal-content{background:#fff;padding:20px;width:90%;max-width:500px;border-radius:15px;max-height:85vh;overflow:auto}
-input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;border:1px solid #ccc}
-button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;border-radius:10px;cursor:pointer}
+
+.order-card{
+ background:#fff;padding:12px;margin-bottom:10px;
+ border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,.08)
+}
+.badge{
+ padding:4px 10px;border-radius:20px;
+ font-size:12px;background:#e0f2fe;color:#075985
+}
+
+.modal{
+ position:fixed;inset:0;background:rgba(0,0,0,.5);
+ display:none;align-items:center;justify-content:center;z-index:20
+}
+.modal-content{
+ background:#fff;padding:20px;width:90%;
+ max-width:500px;border-radius:15px;
+ max-height:85vh;overflow:auto
+}
+input,select,textarea{
+ width:100%;padding:10px;margin:8px 0;
+ border-radius:8px;border:1px solid #ccc
+}
+button.primary{
+ background:#16a34a;color:#fff;border:none;
+ padding:10px 15px;border-radius:10px;cursor:pointer
+}
 </style>
 </head>
 
@@ -35,7 +79,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
 </div>
 
 <div class="header">
- <h3>Retailer Dashboard</h3>
+ <h3>🛒 Retailer Dashboard</h3>
 </div>
 
 <div class="header">
@@ -64,7 +108,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
 <!-- PAYMENT -->
 <div class="modal" id="payModal">
  <div class="modal-content">
-  <h3>Place Order</h3>
+  <h3>📦 Place Order</h3>
 
   <input id="rName" placeholder="Retailer Name">
   <input id="rMobile" placeholder="Retailer Mobile">
@@ -88,52 +132,51 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
 <!-- ORDERS -->
 <div class="modal" id="ordersModal">
  <div class="modal-content">
-  <h3>My Orders</h3>
+  <h3>📜 My Orders</h3>
   <div id="myOrders"></div>
   <button onclick="closeAll()">Close</button>
  </div>
 </div>
 
 <script>
-const API = "https://shopbacked-vmhs.onrender.com";
-const TOKEN = localStorage.getItem("token");
-const ROLE = localStorage.getItem("role");
+const API="https://shopbacked-vmhs.onrender.com";
+const TOKEN=localStorage.getItem("token");
+const ROLE=localStorage.getItem("role");
 
-if(!TOKEN || ROLE !== "retailer"){
+if(!TOKEN || ROLE!=="retailer"){
  alert("Login as Retailer");
- location.href = "index.html";
+ location.href="index.html";
 }
 
-let selectedProduct = null;
+let selectedProduct=null;
 
 /* LOAD PRODUCTS */
 async function loadProducts(){
- const id = wid.value.trim();
+ const id=wid.value.trim();
  if(!id) return alert("Enter Wholesaler ID");
 
- const res = await fetch(API + "/api/products/wholesaler/" + id, {
-  headers:{ Authorization:"Bearer "+TOKEN }
- });
- const data = await res.json();
+ const res=await fetch(API+"/api/products/wholesaler/"+id);
+ const data=await res.json();
 
- products.innerHTML = data.products.map(p=>`
+ products.innerHTML=data.products.map(p=>`
   <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
    <img src="${p.image}">
    <div>${p.productName}</div>
    <div class="price">₹${p.price}</div>
-  </div>`).join("") || "No products";
+  </div>
+ `).join("") || "No products";
 }
 
 /* SHOW DETAIL */
 function showDetail(p){
- selectedProduct = p;
- dName.innerText = p.productName;
- dImg.src = p.image;
- dPrice.innerText = "₹"+p.price;
- dDetail.innerText = p.detail;
- dShop.innerText = p.shopName;
- dMobile.innerText = p.mobile;
- dAddress.innerText = p.address;
+ selectedProduct=p;
+ dName.innerText=p.productName;
+ dImg.src=p.image;
+ dPrice.innerText="₹"+p.price;
+ dDetail.innerText=p.detail;
+ dShop.innerText=p.shopName;
+ dMobile.innerText=p.mobile;
+ dAddress.innerText=p.address;
  detailModal.style.display="flex";
 }
 
@@ -145,47 +188,43 @@ function openPayment(){
 
 /* SUBMIT ORDER */
 async function submitOrder(){
- if(!rName.value || !rMobile.value || !rAddress.value || !vehicleType.value || !txn.value || !proof.files[0]){
-  alert("All fields required"); return;
+ if(!rName.value||!rMobile.value||!rAddress.value||!vehicleType.value||!txn.value||!proof.files[0]){
+  alert("All fields required");return;
  }
 
- const reader = new FileReader();
- reader.onload = async () => {
+ const reader=new FileReader();
+ reader.onload=async()=>{
+  const body={
+   wholesalerId:selectedProduct.wholesalerId,
+   wholesalerName:selectedProduct.shopName,
+   wholesalerMobile:selectedProduct.mobile,
+   wholesalerAddress:selectedProduct.address,
 
-  const body = {
-   wholesalerId: selectedProduct.wholesalerId,
-   wholesalerName: selectedProduct.shopName,
-   wholesalerMobile: selectedProduct.mobile,
-   wholesalerAddress: selectedProduct.address,
+   productId:selectedProduct._id,
+   productName:selectedProduct.productName,
+   price:selectedProduct.price,
+   productImg:selectedProduct.image,
 
-   productId: selectedProduct._id,
-   productName: selectedProduct.productName,
-   price: selectedProduct.price,
-   productImg: selectedProduct.image,
+   retailerName:rName.value,
+   retailerMobile:rMobile.value,
+   retailerAddress:rAddress.value,
 
-   retailerName: rName.value,
-   retailerMobile: rMobile.value,
-   retailerAddress: rAddress.value,
+   vehicleType:vehicleType.value,
 
-   vehicle: vehicleType.value,
-   vehicleType: vehicleType.value,
-
-   txnId: txn.value,
-   proofImg: reader.result
+   txnId:txn.value,
+   proofImg:reader.result
   };
 
-  const res = await fetch(API + "/api/orders", {
+  const res=await fetch(API+"/api/orders",{
    method:"POST",
    headers:{
     "Content-Type":"application/json",
     "Authorization":"Bearer "+TOKEN
    },
-   body: JSON.stringify(body)
+   body:JSON.stringify(body)
   });
 
-  const data = await res.json();
-  console.log(data);
-
+  const data=await res.json();
   if(data.success){
    alert("Order placed successfully ✅");
    closeAll();
@@ -193,25 +232,29 @@ async function submitOrder(){
    alert("Order failed");
   }
  };
-
  reader.readAsDataURL(proof.files[0]);
 }
 
 /* MY ORDERS */
 async function openOrders(){
  ordersModal.style.display="flex";
- const mobile = prompt("Enter your mobile");
+ const mobile=prompt("Enter your mobile");
  if(!mobile) return;
 
- const res = await fetch(API + "/api/orders/retailer/" + mobile);
- const data = await res.json();
+ const res=await fetch(API+"/api/orders/retailer/"+mobile);
+ const data=await res.json();
 
- myOrders.innerHTML = data.orders.map(o=>`
-  <div style="background:#f8fafc;padding:10px;margin-bottom:8px;border-radius:10px">
+ myOrders.innerHTML=data.orders.map(o=>`
+  <div class="order-card">
    <b>${o.productName}</b> ₹${o.price}<br>
-   Status: <b>${o.status}</b>
+   <span class="badge">${o.status}</span>
+   ${o.deliveryBoyName?`
+    <hr>
+    🚚 <b>${o.deliveryBoyName}</b><br>
+    📞 ${o.deliveryBoyMobile}
+   `:""}
   </div>
- `).join("") || "No orders";
+ `).join("")||"No orders";
 }
 
 function closeAll(){
