--- a/retailer.html
+++ b/retailer.html
@@ -1,26 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Retailer Dashboard</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
-
-<style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet"><style>
 *{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#f3f6fb}
 .main{padding:20px}
 .icon-bar{
  display:flex;gap:20px;justify-content:center;
  background:#064e3b;padding:12px;border-radius:14px;
- max-width:600px;margin:auto
+ max-width:650px;margin:auto
 }
 .icon-btn{
  background:#16a34a;color:#fff;border:none;
  width:55px;height:55px;border-radius:50%;
- font-size:22px;cursor:pointer
+ font-size:22px;cursor:pointer;position:relative
+}
+.notify-dot{
+ position:absolute;top:8px;right:8px;
+ width:10px;height:10px;border-radius:50%;
+ background:red;display:none
 }
 .header{
  margin-top:15px;background:#fff;padding:15px;
@@ -40,7 +40,6 @@ body{margin:0;background:#f3f6fb}
  width:100%;height:90px;object-fit:cover;border-radius:8px
 }
 .price{color:#16a34a;font-weight:600;font-size:13px}
-
 .order-card{
  background:#fff;padding:12px;margin-bottom:10px;
  border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,.08)
@@ -49,7 +48,6 @@ body{margin:0;background:#f3f6fb}
  padding:4px 10px;border-radius:20px;
  font-size:12px;background:#e0f2fe;color:#075985
 }
-
 .modal{
  position:fixed;inset:0;background:rgba(0,0,0,.5);
  display:none;align-items:center;justify-content:center;z-index:20
@@ -67,31 +65,19 @@ button.primary{
  background:#16a34a;color:#fff;border:none;
  padding:10px 15px;border-radius:10px;cursor:pointer
 }
-</style>
-</head>
-
-<body>
-<div class="main">
-
-<div class="icon-bar">
+</style></head><body>
+<div class="main"><div class="icon-bar">
  <button class="icon-btn" onclick="loadProducts()"><i class="bi bi-search"></i></button>
  <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
-</div>
-
-<div class="header">
- <h3>🛒 Retailer Dashboard</h3>
-</div>
-
-<div class="header">
+ <button class="icon-btn" onclick="openDeliveryInfo()">
+  <i class="bi bi-truck"></i>
+  <span id="deliveryDot" class="notify-dot"></span>
+ </button>
+</div><div class="header"><h3>🛒 Retailer Dashboard</h3></div><div class="header">
  <input id="wid" placeholder="Enter Wholesaler ID">
  <button class="primary" onclick="loadProducts()">Search</button>
-</div>
-
-<div class="products-grid" id="products"></div>
-</div>
-
-<!-- PRODUCT DETAIL -->
-<div class="modal" id="detailModal">
+</div><div class="products-grid" id="products"></div>
+</div><!-- PRODUCT DETAIL --><div class="modal" id="detailModal">
  <div class="modal-content">
   <h3 id="dName"></h3>
   <img id="dImg" style="width:100%;border-radius:10px">
@@ -103,71 +89,56 @@ button.primary{
   <button class="primary" onclick="openPayment()">Buy</button>
   <button onclick="closeAll()">Close</button>
  </div>
-</div>
-
-<!-- PAYMENT -->
-<div class="modal" id="payModal">
+</div><!-- PAYMENT --><div class="modal" id="payModal">
  <div class="modal-content">
   <h3>📦 Place Order</h3>
-
   <input id="rName" placeholder="Retailer Name">
   <input id="rMobile" placeholder="Retailer Mobile">
   <textarea id="rAddress" placeholder="Retailer Address"></textarea>
-
   <select id="vehicleType">
     <option value="">Select Vehicle</option>
     <option value="two_wheeler">Two Wheeler</option>
     <option value="three_wheeler">Three Wheeler</option>
     <option value="four_wheeler">Four Wheeler</option>
   </select>
-
   <input id="txn" placeholder="Transaction ID">
   <input id="proof" type="file" accept="image/*">
-
   <button class="primary" onclick="submitOrder()">Submit Order</button>
   <button onclick="closeAll()">Cancel</button>
  </div>
-</div>
-
-<!-- ORDERS -->
-<div class="modal" id="ordersModal">
+</div><!-- ORDERS --><div class="modal" id="ordersModal">
  <div class="modal-content">
   <h3>📜 My Orders</h3>
   <div id="myOrders"></div>
   <button onclick="closeAll()">Close</button>
  </div>
-</div>
-
-<script>
+</div><!-- DELIVERY INFO --><div class="modal" id="deliveryModal">
+ <div class="modal-content">
+  <h3>🚚 Delivery Partner</h3>
+  <p><b>Name:</b> <span id="dBoyName"></span></p>
+  <p><b>Mobile:</b> <span id="dBoyMobile"></span></p>
+  <p><b>Status:</b> <span id="dBoyStatus"></span></p>
+  <button class="primary" onclick="closeAll()">Close</button>
+ </div>
+</div><script>
 const API="https://shopbacked-vmhs.onrender.com";
 const TOKEN=localStorage.getItem("token");
 const ROLE=localStorage.getItem("role");
-
-if(!TOKEN || ROLE!=="retailer"){
- alert("Login as Retailer");
- location.href="index.html";
-}
-
+if(!TOKEN||ROLE!=="retailer"){alert("Login as Retailer");location.href="index.html"}
 let selectedProduct=null;
 
-/* LOAD PRODUCTS */
 async function loadProducts(){
  const id=wid.value.trim();
  if(!id) return alert("Enter Wholesaler ID");
-
  const res=await fetch(API+"/api/products/wholesaler/"+id);
  const data=await res.json();
-
  products.innerHTML=data.products.map(p=>`
   <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
    <img src="${p.image}">
    <div>${p.productName}</div>
    <div class="price">₹${p.price}</div>
-  </div>
- `).join("") || "No products";
+  </div>`).join("")||"No products";
 }
-
-/* SHOW DETAIL */
 function showDetail(p){
  selectedProduct=p;
  dName.innerText=p.productName;
@@ -179,19 +150,9 @@ function showDetail(p){
  dAddress.innerText=p.address;
  detailModal.style.display="flex";
 }
-
-/* OPEN PAYMENT */
-function openPayment(){
- detailModal.style.display="none";
- payModal.style.display="flex";
-}
-
-/* SUBMIT ORDER */
+function openPayment(){detailModal.style.display="none";payModal.style.display="flex"}
 async function submitOrder(){
- if(!rName.value||!rMobile.value||!rAddress.value||!vehicleType.value||!txn.value||!proof.files[0]){
-  alert("All fields required");return;
- }
-
+ if(!rName.value||!rMobile.value||!rAddress.value||!vehicleType.value||!txn.value||!proof.files[0]) return alert("All fields required");
  const reader=new FileReader();
  reader.onload=async()=>{
   const body={
@@ -199,67 +160,49 @@ async function submitOrder(){
    wholesalerName:selectedProduct.shopName,
    wholesalerMobile:selectedProduct.mobile,
    wholesalerAddress:selectedProduct.address,
-
    productId:selectedProduct._id,
    productName:selectedProduct.productName,
    price:selectedProduct.price,
    productImg:selectedProduct.image,
-
    retailerName:rName.value,
    retailerMobile:rMobile.value,
    retailerAddress:rAddress.value,
-
    vehicleType:vehicleType.value,
-
    txnId:txn.value,
    proofImg:reader.result
   };
-
-  const res=await fetch(API+"/api/orders",{
-   method:"POST",
-   headers:{
-    "Content-Type":"application/json",
-    "Authorization":"Bearer "+TOKEN
-   },
-   body:JSON.stringify(body)
-  });
-
+  const res=await fetch(API+"/api/orders",{method:"POST",headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},body:JSON.stringify(body)});
   const data=await res.json();
-  if(data.success){
-   alert("Order placed successfully ✅");
-   closeAll();
-  }else{
-   alert("Order failed");
-  }
+  data.success?alert("Order placed ✅"):alert("Order failed");
+  closeAll();
  };
  reader.readAsDataURL(proof.files[0]);
 }
-
-/* MY ORDERS */
 async function openOrders(){
  ordersModal.style.display="flex";
  const mobile=prompt("Enter your mobile");
  if(!mobile) return;
-
  const res=await fetch(API+"/api/orders/retailer/"+mobile);
  const data=await res.json();
-
  myOrders.innerHTML=data.orders.map(o=>`
   <div class="order-card">
    <b>${o.productName}</b> ₹${o.price}<br>
    <span class="badge">${o.status}</span>
-   ${o.deliveryBoyName?`
-    <hr>
-    🚚 <b>${o.deliveryBoyName}</b><br>
-    📞 ${o.deliveryBoyMobile}
-   `:""}
-  </div>
- `).join("")||"No orders";
+  </div>`).join("")||"No orders";
 }
-
-function closeAll(){
- document.querySelectorAll(".modal").forEach(m=>m.style.display="none");
+async function openDeliveryInfo(){
+ const mobile=prompt("Enter your mobile");
+ if(!mobile) return;
+ const res=await fetch(API+"/api/orders/retailer/"+mobile);
+ const data=await res.json();
+ const o=data.orders.find(x=>x.deliveryBoyName);
+ if(!o) return alert("No delivery assigned");
+ dBoyName.innerText=o.deliveryBoyName;
+ dBoyMobile.innerText=o.deliveryBoyMobile;
+ dBoyStatus.innerText=o.status;
+ deliveryDot.style.display="none";
+ deliveryModal.style.display="flex";
 }
-</script>
-</body>
+function closeAll(){document.querySelectorAll('.modal').forEach(m=>m.style.display='none')}
+</script></body>
 </html>
