--- a/delivery.html
+++ b/delivery.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Delivery Partner Panel</title>
+<title>Delivery Partner Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
 <style>
-*{font-family:Poppins,sans-serif;box-sizing:border-box}
+*{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#eef2f7}
-.main{max-width:900px;margin:auto;padding:14px}
+.main{max-width:900px;margin:auto;padding:16px}
 
 .top{
  background:#0f172a;color:#fff;
@@ -36,7 +36,10 @@ body{margin:0;background:#eef2f7}
  width:90px;height:80px;object-fit:cover;border-radius:10px
 }
 
-.badge{padding:4px 10px;border-radius:20px;font-size:12px}
+.badge{
+ padding:4px 10px;border-radius:20px;
+ font-size:12px;display:inline-block
+}
 .green{background:#dcfce7;color:#166534}
 .orange{background:#fff7ed;color:#9a3412}
 .blue{background:#e0f2fe;color:#075985}
@@ -49,118 +52,56 @@ body{margin:0;background:#eef2f7}
 .accept{background:#16a34a;color:#fff}
 .pickup{background:#f59e0b;color:#fff}
 .done{background:#2563eb;color:#fff}
-
-.modal{
- position:fixed;inset:0;background:rgba(0,0,0,.45);
- display:none;align-items:center;justify-content:center;z-index:99
-}
-.modal-box{
- background:#fff;width:92%;max-width:420px;
- border-radius:16px;padding:20px
-}
-input,select{
- width:100%;padding:10px;margin-top:8px;
- border-radius:10px;border:1px solid #ccc
-}
-
-.notify{
- position:fixed;top:15px;right:15px;
- background:#0f172a;color:#fff;
- padding:12px 18px;border-radius:14px;
- display:none;align-items:center;gap:10px
-}
 </style>
 </head>
 
 <body>
-<div class="notify" id="notify">
- <i class="bi bi-bell-fill"></i>
- <span id="notifyText"></span>
-</div>
 
 <div class="main">
+
+<!-- HEADER -->
 <div class="top">
  <h3>🚚 Delivery Partner</h3>
- <div>
-  <button class="icon-btn" onclick="openProfile()"><i class="bi bi-person-circle"></i></button>
- </div>
+ <button class="icon-btn">
+  <i class="bi bi-person-circle"></i>
+ </button>
 </div>
 
+<!-- DELIVERY BOY INFO -->
 <div class="card">
  <b>ID:</b> <span id="dbId"></span><br>
  <span class="badge green">ACTIVE</span>
 </div>
 
+<!-- ORDERS -->
 <div id="orders"></div>
-</div>
 
-<!-- PROFILE -->
-<div class="modal" id="profileModal">
- <div class="modal-box">
-  <h3>Delivery Profile</h3>
-  <input id="pName" placeholder="Full Name">
-  <input id="pMobile" placeholder="Mobile">
-  <select id="pVehicle">
-   <option value="">Vehicle Type</option>
-   <option>Two Wheeler</option>
-   <option>Three Wheeler</option>
-   <option>Four Wheeler</option>
-  </select>
-  <input id="pVehicleNo" placeholder="Vehicle Number">
-  <input id="pCity" placeholder="City">
-  <button class="btn accept" onclick="saveProfile()">
-   <i class="bi bi-save"></i> Save Profile
-  </button>
- </div>
 </div>
 
 <script>
-const API="https://shopbacked-vmhs.onrender.com";
-const DBID=localStorage.getItem("userId");
-dbId.innerText=DBID?.slice(0,8).toUpperCase();
+const API = "https://shopbacked-vmhs.onrender.com";
+const DBID = localStorage.getItem("userId");
+const TOKEN = localStorage.getItem("token");
 
-/* PROFILE */
-function openProfile(){
- profileModal.style.display="flex";
- const p=JSON.parse(localStorage.getItem("deliveryProfile")||"{}");
- pName.value=p.name||"";
- pMobile.value=p.mobile||"";
- pVehicle.value=p.vehicle||"";
- pVehicleNo.value=p.vehicleNo||"";
- pCity.value=p.city||"";
-}
-function saveProfile(){
- localStorage.setItem("deliveryProfile",JSON.stringify({
-  name:pName.value,
-  mobile:pMobile.value,
-  vehicle:pVehicle.value,
-  vehicleNo:pVehicleNo.value,
-  city:pCity.value
- }));
- alert("Profile Saved");
- profileModal.style.display="none";
-}
-
-/* NOTIFICATION */
-function notify(msg){
- notifyText.innerText=msg;
- notify.style.display="flex";
- setTimeout(()=>notify.style.display="none",3000);
-}
+dbId.innerText = DBID ? DBID.slice(0,8).toUpperCase() : "N/A";
 
 /* LOAD ORDERS */
 async function loadOrders(){
-  const res = await fetch(
-    `${API}/api/orders/delivery/${DBID}`,
-    { headers:{Authorization:"Bearer "+TOKEN} }
-  );
+  const res = await fetch(`${API}/api/orders/delivery/${DBID}`,{
+    headers:{ "Authorization":"Bearer "+TOKEN }
+  });
   const data = await res.json();
-  ordersList = data.orders;
-  renderOrders();
+  renderOrders(data.orders || []);
 }
 
+/* RENDER */
 function renderOrders(list){
- orders.innerHTML=list.map(o=>`
+ if(!list.length){
+  orders.innerHTML="<p style='text-align:center;margin-top:20px'>No Orders</p>";
+  return;
+ }
+
+ orders.innerHTML = list.map(o=>`
  <div class="card order">
   <img src="${o.productImg}">
   <div style="flex:1">
@@ -177,53 +118,84 @@ function renderOrders(list){
    🚚 Vehicle: ${o.vehicleType}<br>
    <span class="badge blue">${o.status}</span><br>
 
-   ${o.status==="confirmed_by_wholesaler"?`
-    <button class="btn accept" onclick="accept('${o._id}')">
-     <i class="bi bi-check-circle-fill"></i> Accept
-    </button>`:""}
+   ${
+    o.status==="confirmed_by_wholesaler"
+    ? `<button class="btn accept" onclick="acceptOrder('${o._id}')">
+        <i class="bi bi-check-circle-fill"></i> Accept
+       </button>`
+    : ""
+   }
 
-   ${o.status==="delivery_accepted"?`
-    <button class="btn pickup" onclick="pickup('${o._id}')">
-     <i class="bi bi-box-seam-fill"></i> Pickup
-    </button>`:""}
+   ${
+    o.status==="delivery_accepted"
+    ? `<button class="btn pickup" onclick="pickupOrder('${o._id}')">
+        <i class="bi bi-box-seam-fill"></i> Pickup
+       </button>`
+    : ""
+   }
 
-   ${o.status==="picked_up"?`
-    <button class="btn done">
-     <i class="bi bi-check2-circle"></i> Delivered
-    </button>`:""}
+   ${
+    o.status==="picked_up"
+    ? `<button class="btn done" onclick="deliverOrder('${o._id}')">
+        <i class="bi bi-check2-circle"></i> Delivered
+       </button>`
+    : ""
+   }
+
   </div>
  </div>
- `).join("")||"<p>No Orders</p>";
+ `).join("");
 }
 
+/* ACCEPT */
 async function acceptOrder(id){
-  const profile = JSON.parse(
-    localStorage.getItem("deliveryProfile_"+DBID) || "{}"
-  );
+ const profile = JSON.parse(localStorage.getItem("deliveryProfile")||"{}");
 
-  await fetch(`${API}/api/orders/${id}/delivery-accept`,{
-    method:"POST",
-    headers:{
-      "Content-Type":"application/json",
-      "Authorization":"Bearer "+TOKEN
-    },
-    body:JSON.stringify({
-      deliveryBoyId: DBID,
-      deliveryBoyName: profile.name,
-      deliveryBoyMobile: profile.mobile
-    })
-  });
+ await fetch(`${API}/api/orders/${id}/delivery-accept`,{
+  method:"POST",
+  headers:{
+   "Content-Type":"application/json",
+   "Authorization":"Bearer "+TOKEN
+  },
+  body:JSON.stringify({
+   deliveryBoyId: DBID,
+   deliveryBoyName: profile.name || "Delivery Partner",
+   deliveryBoyMobile: profile.mobile || ""
+  })
+ });
 
-  loadOrders(); // refresh
-}
-async function pickup(id){
- await fetch(API+"/api/orders/"+id+"/pickup",{method:"POST"});
- notify("Order Picked Up");
  loadOrders();
+}
+
+/* PICKUP */
+async function pickupOrder(id){
+ await fetch(`${API}/api/orders/${id}/pickup`,{method:"POST"});
+ loadOrders();
+}
+
+/* DELIVERED */
+async function deliverOrder(id){
+ const code = prompt("Enter Delivery Code");
+ if(!code) return;
+
+ const res = await fetch(`${API}/api/orders/${id}/delivered`,{
+  method:"POST",
+  headers:{ "Content-Type":"application/json" },
+  body:JSON.stringify({ deliveryCode:code })
+ });
+
+ const data = await res.json();
+ if(data.success){
+  alert("Order Delivered ✅");
+  loadOrders();
+ }else{
+  alert("Invalid Code ❌");
+ }
 }
 
 loadOrders();
 setInterval(loadOrders,8000);
 </script>
+
 </body>
 </html>
