--- a/retailer.html
+++ b/retailer.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Retailer Dashboard</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet"><style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+<style>
 *{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#f3f6fb}
 .main{padding:20px}
@@ -65,19 +68,34 @@ button.primary{
  background:#16a34a;color:#fff;border:none;
  padding:10px 15px;border-radius:10px;cursor:pointer
 }
-</style></head><body>
-<div class="main"><div class="icon-bar">
- <button class="icon-btn" onclick="loadProducts()"><i class="bi bi-search"></i></button>
- <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
- <button class="icon-btn" onclick="openDeliveryInfo()">
-  <i class="bi bi-truck"></i>
-  <span id="deliveryDot" class="notify-dot"></span>
- </button>
-</div><div class="header"><h3>🛒 Retailer Dashboard</h3></div><div class="header">
- <input id="wid" placeholder="Enter Wholesaler ID">
- <button class="primary" onclick="loadProducts()">Search</button>
-</div><div class="products-grid" id="products"></div>
-</div><!-- PRODUCT DETAIL --><div class="modal" id="detailModal">
+</style>
+</head>
+<body>
+
+<div class="main">
+  <!-- ICON BAR -->
+  <div class="icon-bar">
+    <button class="icon-btn" onclick="loadProducts()"><i class="bi bi-search"></i></button>
+    <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
+    <button class="icon-btn" onclick="openDeliveryInfo()">
+      <i class="bi bi-truck"></i>
+      <span id="deliveryDot" class="notify-dot"></span>
+    </button>
+  </div>
+
+  <!-- HEADER -->
+  <div class="header"><h3>🛒 Retailer Dashboard</h3></div>
+  <div class="header">
+    <input id="wid" placeholder="Enter Wholesaler ID">
+    <button class="primary" onclick="loadProducts()">Search</button>
+  </div>
+
+  <!-- PRODUCTS GRID -->
+  <div class="products-grid" id="products"></div>
+</div>
+
+<!-- PRODUCT DETAIL MODAL -->
+<div class="modal" id="detailModal">
  <div class="modal-content">
   <h3 id="dName"></h3>
   <img id="dImg" style="width:100%;border-radius:10px">
@@ -89,7 +107,10 @@ button.primary{
   <button class="primary" onclick="openPayment()">Buy</button>
   <button onclick="closeAll()">Close</button>
  </div>
-</div><!-- PAYMENT --><div class="modal" id="payModal">
+</div>
+
+<!-- PAYMENT MODAL -->
+<div class="modal" id="payModal">
  <div class="modal-content">
   <h3>📦 Place Order</h3>
   <input id="rName" placeholder="Retailer Name">
@@ -106,27 +127,34 @@ button.primary{
   <button class="primary" onclick="submitOrder()">Submit Order</button>
   <button onclick="closeAll()">Cancel</button>
  </div>
-</div><!-- ORDERS --><div class="modal" id="ordersModal">
+</div>
+
+<!-- ORDERS MODAL -->
+<div class="modal" id="ordersModal">
  <div class="modal-content">
   <h3>📜 My Orders</h3>
   <div id="myOrders"></div>
   <button onclick="closeAll()">Close</button>
  </div>
-</div><!-- DELIVERY INFO --><div class="modal" id="deliveryModal">
+</div>
+
+<!-- DELIVERY MODAL -->
+<div class="modal" id="deliveryModal">
  <div class="modal-content">
-  <h3>🚚 Delivery Partner</h3>
-  <p><b>Name:</b> <span id="dBoyName"></span></p>
-  <p><b>Mobile:</b> <span id="dBoyMobile"></span></p>
-  <p><b>Status:</b> <span id="dBoyStatus"></span></p>
+  <h3>🚚 Delivery Orders</h3>
+  <div id="deliveryList" style="max-height:60vh;overflow:auto"></div>
   <button class="primary" onclick="closeAll()">Close</button>
  </div>
-</div><script>
+</div>
+
+<script>
 const API="https://shopbacked-vmhs.onrender.com";
 const TOKEN=localStorage.getItem("token");
 const ROLE=localStorage.getItem("role");
 if(!TOKEN||ROLE!=="retailer"){alert("Login as Retailer");location.href="index.html"}
 let selectedProduct=null;
 
+/* LOAD PRODUCTS */
 async function loadProducts(){
  const id=wid.value.trim();
  if(!id) return alert("Enter Wholesaler ID");
@@ -139,6 +167,8 @@ async function loadProducts(){
    <div class="price">₹${p.price}</div>
   </div>`).join("")||"No products";
 }
+
+/* SHOW PRODUCT DETAIL */
 function showDetail(p){
  selectedProduct=p;
  dName.innerText=p.productName;
@@ -150,9 +180,16 @@ function showDetail(p){
  dAddress.innerText=p.address;
  detailModal.style.display="flex";
 }
+
+/* OPEN PAYMENT MODAL */
 function openPayment(){detailModal.style.display="none";payModal.style.display="flex"}
+
+/* SUBMIT ORDER */
 async function submitOrder(){
  if(!rName.value||!rMobile.value||!rAddress.value||!vehicleType.value||!txn.value||!proof.files[0]) return alert("All fields required");
+
+ localStorage.setItem("retailerMobile", rMobile.value); // save mobile for notifications
+
  const reader=new FileReader();
  reader.onload=async()=>{
   const body={
@@ -178,6 +215,8 @@ async function submitOrder(){
  };
  reader.readAsDataURL(proof.files[0]);
 }
+
+/* OPEN MY ORDERS */
 async function openOrders(){
  ordersModal.style.display="flex";
  const mobile=prompt("Enter your mobile");
@@ -190,19 +229,49 @@ async function openOrders(){
    <span class="badge">${o.status}</span>
   </div>`).join("")||"No orders";
 }
+
+/* OPEN DELIVERY INFO (MULTIPLE ORDERS, SCROLLABLE) */
 async function openDeliveryInfo(){
- const mobile=prompt("Enter your mobile");
+ const mobile=localStorage.getItem("retailerMobile") || prompt("Enter your mobile");
  if(!mobile) return;
+
  const res=await fetch(API+"/api/orders/retailer/"+mobile);
  const data=await res.json();
- const o=data.orders.find(x=>x.deliveryBoyName);
- if(!o) return alert("No delivery assigned");
- dBoyName.innerText=o.deliveryBoyName;
- dBoyMobile.innerText=o.deliveryBoyMobile;
- dBoyStatus.innerText=o.status;
+
+ const deliveryOrders = data.orders.filter(o => o.deliveryBoyName);
+
+ if(deliveryOrders.length === 0){
+  alert("No delivery assigned");
+  return;
+ }
+
+ deliveryList.innerHTML = deliveryOrders.map(o=>`
+  <div class="order-card">
+   <b>${o.productName}</b> ₹${o.price}<br>
+   <span class="badge">${o.status}</span><br>
+   🚚 <b>${o.deliveryBoyName}</b><br>
+   📞 ${o.deliveryBoyMobile}
+  </div>
+ `).join("");
+
  deliveryDot.style.display="none";
  deliveryModal.style.display="flex";
 }
+
+/* DELIVERY NOTIFICATION DOT CHECK */
+async function checkDeliveryNotify(){
+ const mobile = localStorage.getItem("retailerMobile");
+ if(!mobile) return;
+ const res = await fetch(API+"/api/orders/retailer/"+mobile);
+ const data = await res.json();
+ const hasDelivery = data.orders.some(o => o.deliveryBoyName);
+ deliveryDot.style.display = hasDelivery ? "block" : "none";
+}
+setInterval(checkDeliveryNotify,8000);
+
+/* CLOSE MODALS */
 function closeAll(){document.querySelectorAll('.modal').forEach(m=>m.style.display='none')}
-</script></body>
+</script>
+
+</body>
 </html>
