--- a/retailer.html
+++ b/retailer.html
@@ -174,18 +174,43 @@ if(!TOKEN||ROLE!=="retailer"){alert("Login as Retailer");location.href="index.ht
 let selectedProduct=null;
 
 /* LOAD PRODUCTS */
-async function loadProducts(){
- const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- const id = profile.wholesalerId || prompt("Enter Wholesaler ID");
- if(!id) return alert("Wholesaler ID required");
- const res = await fetch(API+"/api/products/wholesaler/"+id);
- const data = await res.json();
- products.innerHTML=data.products.map(p=>`
-  <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
-   <img src="${p.image}">
-   <div>${p.productName}</div>
-   <div class="price">₹${p.price}</div>
-  </div>`).join("")||"No products";
+async function loadProducts() {
+  // पहले retailer profile से wholesalerId check करो
+  const profile = JSON.parse(localStorage.getItem("retailerProfile") || "{}");
+  let id = profile.wholesalerId;
+
+  // अगर profile में नहीं है तो prompt से ले लो
+  if (!id) {
+    id = prompt("Enter Wholesaler ID");
+    if (!id || id.trim() === "") {
+      alert("Wholesaler ID required");
+      return; // function रोक दो
+    }
+    id = id.trim();
+  }
+
+  try {
+    const res = await fetch(`${API}/api/products/wholesaler/${id}`);
+    const data = await res.json();
+
+    if (!data.products || data.products.length === 0) {
+      products.innerHTML = "No products";
+      return;
+    }
+
+    // products display
+    products.innerHTML = data.products.map(p => `
+      <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
+        <img src="${p.image}">
+        <div>${p.productName}</div>
+        <div class="price">₹${p.price}</div>
+      </div>
+    `).join("");
+
+  } catch (err) {
+    console.error(err);
+    alert("Failed to load products. Try again later.");
+  }
 }
 
 /* SHOW PRODUCT DETAIL */
