--- a/retailer.html
+++ b/retailer.html
@@ -174,29 +174,19 @@ if(!TOKEN||ROLE!=="retailer"){alert("Login as Retailer");location.href="index.ht
 let selectedProduct=null;
 
 /* LOAD PRODUCTS */
-async function loadProducts() {
-  // पहले retailer profile से wholesalerId check करो
-  const profile = JSON.parse(localStorage.getItem("retailerProfile") || "{}");
-  let id = profile.wholesalerId;
+async function loadProducts(){
+const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+if(!id) return alert("Wholesaler ID required");
+const res = await fetch(API+"/api/products/wholesaler/"+id);
+const data = await res.json();
+products.innerHTML=data.products.map(p=>`
 
-  // अगर profile में नहीं है तो prompt से ले लो
-  if (!id) {
-    id = prompt("Enter Wholesaler ID");
-    if (!id || id.trim() === "") {
-      alert("Wholesaler ID required");
-      return; // function रोक दो
-    }
-    id = id.trim();
-  }
-
-  try {
-    const res = await fetch(`${API}/api/products/wholesaler/${id}`);
-    const data = await res.json();
-
-    if (!data.products || data.products.length === 0) {
-      products.innerHTML = "No products";
-      return;
-    }
+  <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>  
+   <img src="${p.image}">  
+   <div>${p.productName}</div>  
+   <div class="price">₹${p.price}</div>  
+  </div>`).join("")||"No products";  
+}  
 
     // products display
     products.innerHTML = data.products.map(p => `
