--- a/retailer.html
+++ b/retailer.html
@@ -174,20 +174,51 @@ if(!TOKEN||ROLE!=="retailer"){alert("Login as Retailer");location.href="index.ht
 let selectedProduct=null;
 
 /* LOAD PRODUCTS */
-async function loadProducts(){
-const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
-if(!id) return alert("Wholesaler ID required");
-const res = await fetch(API+"/api/products/wholesaler/"+id);
-const data = await res.json();
-products.innerHTML=data.products.map(p=>`
+async function loadProducts() {
+  // retailer profile se wholesalerId check karo
+  const profile = JSON.parse(localStorage.getItem("retailerProfile") || "{}");
 
-  <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>  
-   <img src="${p.image}">  
-   <div>${p.productName}</div>  
-   <div class="price">₹${p.price}</div>  
-  </div>`).join("")||"No products";  
-}  
+  // input box me value agar hai to use karo, varna profile se
+  let id = document.getElementById("wid").value.trim() || profile.wholesalerId;
 
+  // agar ID nahi hai (pehli baar input box bhi empty) → alert
+  if (!id) {
+    alert("Wholesaler ID required");
+    return;
+  }
+
+  try {
+    const res = await fetch(`${API}/api/products/wholesaler/${id}`);
+    const data = await res.json();
+
+    if (!data.products || data.products.length === 0) {
+      products.innerHTML = "No products";
+      return;
+    }
+
+    // products display
+    products.innerHTML = data.products.map(p => `
+      <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
+        <img src="${p.image}">
+        <div>${p.productName}</div>
+        <div class="price">₹${p.price}</div>
+      </div>
+    `).join("");
+
+    // agar profile me ID nahi thi to save kar do
+    if (!profile.wholesalerId) {
+      profile.wholesalerId = id;
+      localStorage.setItem("retailerProfile", JSON.stringify(profile));
+    }
+
+    // input box ko update kar do, taki dobara prompt na aaye
+    document.getElementById("wid").value = id;
+
+  } catch (err) {
+    console.error(err);
+    alert("Failed to load products. Try again later.");
+  }
+}
     // products display
     products.innerHTML = data.products.map(p => `
       <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
